fix : form submission operation, reset value, spacing

--- a/styles/pages/partners.scss
+++ b/styles/pages/partners.scss
@@ -128,9 +128,11 @@
     &__left {
       width: calc(100% - 400px - 10rem);
       margin-top: 8rem;
+      margin-bottom: 3rem;
       @include responsive($ipad-pro) {
         width: 100%;
         margin-top: 0;
+        margin-bottom: 0;
       }
       .feat__title {
         text-align: center;
